--- a/Styles/Client/details.css
+++ b/Styles/Client/details.css
@@ -6,7 +6,6 @@
   display: flex;
   position: fixed;
   z-index: 13;
-  top: 0;
   left: 0;
   flex-direction: column;
   align-items: center;
@@ -44,6 +43,7 @@
 .icon img:hover {
   filter: grayscale(0%);
   transform: scale(1.1);
+  -webkit-filter: grayscale(0%);
 }
 
 .icon:hover {
