--- a/Styles/Client/search.css
+++ b/Styles/Client/search.css
@@ -6,57 +6,51 @@
   gap: 10px;
 }
 
-.side-bar {
-  position: fixed;
+.left {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  width: 56px;
+  position: absolute;
+  z-index: 999;
   left: 0;
-  top: 0;
-  z-index: 10;
-  margin-top: 0;
+  flex-direction: column;
+  align-items: center;
+  width: 56px;
+  background: #1d1d1d80;
   padding-top: 40px;
   backdrop-filter: blur(24px);
-  gap: 64px;
+  box-shadow: 0px 40px 40px 8px #00000029;
 }
 
-.logo_links {
+.logo-div {
+  margin-bottom: 64px;
+}
+
+.sidebar {
+  width: 32px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  gap: 80px;
-  padding: 0 12px;
-}
-.main-logo {
-  width: 56px;
-  height: 56px;
+  align-items: center;
 }
 
 .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: transform 0.3s ease, filter 0.3s ease;
-  cursor: pointer;
+  margin-bottom: 80px;
+  display: block;
+  text-align: center;
+}
+
+.icon img {
+  width: 32px;
+  height: 32px;
+  transition: filter 0.3s, transform 0.3s;
+}
+
+.icon img:hover {
+  filter: grayscale(0%);
+  transform: scale(1.1);
 }
 
 .icon:hover {
-  color: #1d1d1d;
-  transform: scale(1.2);
-  filter: brightness(2);
-  z-index: 20;
-}
-
-.icon-img {
-  filter: brightness(0) saturate(100%) invert(48%) sepia(93%) saturate(696%)
-    hue-rotate(160deg) brightness(101%) contrast(102%);
-  transition: transform 0.3s ease, filter 0.3s ease;
-}
-
-.icon:hover .icon-img {
-  transform: scale(1.2);
-  filter: brightness(0) saturate(100%) invert(48%) sepia(93%) saturate(696%)
-    hue-rotate(160deg) brightness(101%) contrast(102%);
+  cursor: pointer;
 }
 
 .search-panel {
@@ -65,11 +59,13 @@
   padding-top: 157px;
   padding-left: 56px;
 }
+
 .search-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .search-title {
   font-family: var(--Font_Roboto);
   font-size: 35px;
@@ -123,6 +119,7 @@ input::placeholder {
   padding-top: 56px;
   padding-bottom: 80px;
 }
+
 .movie-card {
   position: relative;
   background-color: #1e1e1e;
@@ -136,8 +133,8 @@ input::placeholder {
 }
 
 .movie-poster img {
-height: 100%;
-width: 100%;
+  height: 100%;
+  width: 100%;
   transition: filter 0.3s ease, transform 0.3s ease;
 }
 
@@ -204,10 +201,12 @@ form {
   box-shadow: 0 4px 8px rgba(59, 56, 56, 0.3);
   cursor: pointer;
 }
+
 .movie-card:hover .movie-info {
   opacity: 1;
   transform: translateY(0);
 }
+
 .star {
   font-size: 20px;
   margin-right: 2px;
